Header Default overflow-x problem is FIXED.

--- a/src/styles/custom.less
+++ b/src/styles/custom.less
@@ -2122,6 +2122,10 @@
     }
 }
 
+.border {
+    border: 1px solid #dee2e6 !important;
+}
+
 
 /*  ===========  /IMPORT FROM BOOTSTRAP  ===========  */
 
